styles for block Footer

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <li class="about__list-item">Gluten-Free & Grain-Free</li>
                     <li class="about__list-item">Corn-Free & Soy-Free</li>
                 </ul>
-                <button class="about__btn btn">About Organic Smoothie</button>
+                <a href="#" class="about__btn btn">About Organic Smoothie</a>
             </div>
     </section>
     <section class="products">
@@ -119,25 +119,25 @@
                 <img class="products__item-image " src="/assets/images/products/img1.png" alt="Dark Chocolate Smoothie" >
                 <h5 class="products__item-title">Dark Chocolate Smoothie</h5>
                 <div class="products__item-mesure">100 ml</div>
-                <button class="products__item-btn  products__item-btn--purpure">Buy</button>
+                <button class="products__item-btn btn products__item-btn--purpure">Buy</button>
             </figure>
             <figure class="products__item products__item--green ">
                 <img class="products__item-image" src="/assets/images/products/img2.png" alt="Vegan Lettuce Smoothie" >
                 <h5 class="products__item-title">Vegan Lettuce Smoothie</h5>
                 <div class="products__item-mesure">100 ml</div>
-                <button class="products__item-btn products__item-btn--green">Buy</button>
+                <button class="products__item-btn btn products__item-btn--green">Buy</button>
             </figure>
             <figure class="products__item products__item--yellow">
                 <img class="products__item-image" src="/assets/images/products/img3.png" alt="Lemon Ginger Smoothie" >
                 <h5 class="products__item-title">Lemon Ginger Smoothie</h5>
                 <div class="products__item-mesure">100 ml</div>
-                <button class="products__item-btn products__item-btn--yellow">Buy</button>
+                <button class="products__item-btn btn products__item-btn--yellow">Buy</button>
             </figure>
             <figure class="products__item products__item--red ">
                 <img class="products__item-image" src="/assets/images/products/img4.png" alt="Lemon Ginger Smoothie" >
                 <h5 class="products__item-title">Turmeric Garlic Smoothie</h5>
                 <div class="products__item-mesure">100 ml</div>
-                <button class="products__item-btn products__item-btn--red">Buy</button>
+                <button class="products__item-btn btn products__item-btn--red">Buy</button>
             </figure>
         </div>
     </section>
@@ -197,13 +197,13 @@
     </section>
     <footer class="footer">
         <div class="footer-top">
-            <div class="logo">
+            <div class="footer-logo">
                 <a href="" class="logo__link">
                     <img class="logo__link-image" src="/assets/images/logo/logo.png" alt="logo-image" >
                 </a>
             </div>
             <nav class="information">
-                <h4 class="information__title">Information</h4>
+                <h4 class="information__title title">Information</h4>
                     <ul class="information__list">
                         <li class="linformation__list-item">
                             <a class="linformation__list-link" href="" >Search</a>
@@ -220,53 +220,40 @@
                     </ul>
             </nav>
             <nav class="payment">
-                <h4 class="payment__title">Payment</h4>
-                <a class="payment__link" href="" >
+                <h4 class="payment__title title">Payment</h4>
+                <div class="payment__image-wrap">
                     <img class="payment__image" src="/assets/images/payment/amex.png" alt="AMEX-logo" >
-                </a>
-                <a class="payment__link" href="" >
                     <img class="payment__image" src="/assets/images/payment/apple-pay.png" alt="Apple-pay-logo" >
-                </a>
-                <a href="" class="payment__link">
                     <img class="payment__image" src="/assets/images/payment/maestro.png" alt="Maestro-logo" >
-                </a>
-                <a class="payment__link" href="" >
                     <img class="payment__image" src="/assets/images/payment/discover.png" alt="Discover-logo" >
-                </a>
-                <a class="payment__link" href="" >
                     <img class="payment__image" src="/assets/images/payment/jcb.png" alt="JCB-logo" >
-                </a>
-                <a class="payment__link" href="" >
                     <img class="payment__image" src="/assets/images/payment/mastercard.png" alt="Mastercard-logo" >
-                </a>
-                <a class="payment__link" href="" >
                     <img class="payment__image" src="/assets/images/payment/paypal.png" alt="Paypal-logo" >
-                </a>
-                <a class="payment__link" href="" >
                     <img class="payment__image" src="/assets/images/payment/shopify-pay.png" alt="Shopify-logo " >
-                </a>
-                <a class="payment__link" href="" >
                     <img class="payment__image" src="/assets/images/payment/visa.png" alt="Visa-logo" >
-                </a>
+                </div>
             </nav>
             <div class="subscription">
-                <h4 class="subscription__title">Don't miss out!</h4>
-                <input class="subscription__input" type="mail" placeholder="subscribe to our newsletter">
-                <div class="social">
-                    <h5 class="social__title">FOLLOW US</h5>
-                    <ul class="social__list">
-                        <li class="social__list-item"><a class="social__list-link" href=""><img class="social__list-img"  src="/assets/images/social/facebook-icon.png" alt="Facebook-icon"></a></li>
-                        <li class="social__list-item"><a class="social__list-link"  href=""><img class="social__list-img" src="/assets/images/social/pinterest.png" alt="Pinterest-icon"></a></li>
-                        <li class="social__list-item"><a class="social__list-link"  href=""><img class="social__list-img" src="/assets/images/social/instagram-icon.png" alt="instagram></a></li>
+                <h4 class="subscription__title title">Don't miss out!</h4>
+                <input class="subscription__input input" type="mail" placeholder="subscribe to our newsletter">
+                <img class="input-icon" src="/assets/images/subscribe/letter.png" alt="">
+                <div class="footer-social">
+                    <h5 class="footer-social__title">FOLLOW US</h5>
+                    <ul class="footer-social__list">
+                        <li class="footer-social__list-item"><img class="social__list-img"  src="/assets/images/footer-top/facebook-white.png" alt="Facebook-icon"></li>
+                        <li class="footer-social__list-item"><img class="social__list-img" src="/assets/images/footer-top/pinterest-white.png" alt="Pinterest-icon"></li>
+                        <li class="footer-social__list-item"><img class="social__list-img" src="/assets/images/footer-top/instagram-white.png" alt="instagram"></li>
                     </ul>
                 </div>
                 </div>
             </div>
         </div>
-        <div class="footer__bottom">
+        <div class=" footer__bottom" >
             <span class="footer__botton-text">© 2020. span All Rights Reserved.</span>
             <div class="hug">
-                <a href="" class="hug__link"></a>
+                <a href="" class="hug__link">
+                    <img class="hug__link-img" src="/assets/images/footer-bottom/arrow-top.png" alt="arrow-top">
+                </a>
             </div>
         </div>
     </footer>
