--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <section class="smoothies">
         <h1 class="smoothies__title">What are these smoothies</h1>
-        <p class="smoothies__decription">
+        <p class="smoothies__description">
             A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements. 
         </p>
         <div class="features">
@@ -95,6 +95,7 @@
         </div>
     </section>
     <section class="about">
+        <div class="about__conteiner">
             <div class="about__image-wrap">
                 <img class="about__image" src="/assets/images/about/img.png" alt="Smoothie">
             </div>
@@ -112,6 +113,7 @@
                 </ul>
                 <a href="#" class="about__btn btn">About Organic Smoothie</a>
             </div>
+        </div>
     </section>
     <section class="products">
         <div class="products__items">
@@ -205,17 +207,17 @@
             <nav class="information">
                 <h4 class="information__title title">Information</h4>
                     <ul class="information__list">
-                        <li class="linformation__list-item">
-                            <a class="linformation__list-link" href="" >Search</a>
+                        <li class="information__list-item">
+                            <a class="information__list-link" href="" >Search</a>
                         </li>
-                        <li class="linformation__list-item">
-                            <a class="linformation__list-link" href="" >Contact us</a>
+                        <li class="information__list-item">
+                            <a class="information__list-link" href="" >Contact us</a>
                         </li>
-                        <li class="linformation__list-item">
-                            <a class="linformation__list-link" href="" >Terms & Conditions</a>
+                        <li class="information__list-item">
+                            <a class="information__list-link" href="" >Terms & Conditions</a>
                         </li>
-                        <li class="linformation__list-item">
-                            <a class="linformation__list-link" href="" >Privac/Policy</a>
+                        <li class="information__list-item">
+                            <a class="information__list-link" href="" >Privac/Policy</a>
                         </li>
                     </ul>
             </nav>
