changed the block hug

--- a/index.html
+++ b/index.html
@@ -253,9 +253,8 @@
         <div class=" footer__bottom" >
             <span class="footer__botton-text">© 2020. span All Rights Reserved.</span>
             <div class="hug">
-                <a href="" class="hug__link">
-                    <img class="hug__link-img" src="/assets/images/footer-bottom/arrow-top.png" alt="arrow-top">
-                </a>
+                <div class="hug__text">Go top</div>
+                <div class="hug__arrow"><a class="hug__arrow-link" href="#"><img class="hug__arrow-img" src="/assets/images/footer-bottom/arrow-top.png" alt="arrow-top"></a></div>   
             </div>
         </div>
     </footer>
