all adaptive blocks

--- a/index.html
+++ b/index.html
@@ -58,65 +58,67 @@
 </header>
 
     <section class="smoothies">
-        <h1 class="smoothies__title">What are these smoothies</h1>
-        <p class="smoothies__description">
-            A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements. 
-        </p>
-        <div class="features">
-            <div class="features__items">
-                <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon1.png" alt="Plant Based">
-                    <h6 class="features__item-text">Plant Based</h6>
-                </div>
-                <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon2.png" alt="Vegan">
-                    <p class="features__item-text">Vegan</p>
-                </div>
-                <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon3.png" alt="Palleo">
-                    <p class="features__item-text">Palleo</p>
-                </div>
-                <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon4.png" alt="Gluten-Free">
-                    <p class="features__item-text">Gluten-Free</p>
-                </div>
-                <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon5.png" alt="Corn-Free">
-                    <p class="features__item-text">Corn-Free</p>
-                </div>
-                <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon6.png" alt="Soy-Free">
-                    <p class="features__item-text">Soy-Free</p>
-                </div>
-                <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon7.png" alt="Ayurvedic">
-                    <p class="features__item-text">Ayurvedic</p>
-                </div>
-                <div class="features__item">
-                    <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon8.png" alt="Made With Love">
-                    <p class="features__item-text">Made With Love</p>
+            <h1 class="smoothies__title">What are these smoothies</h1>
+            <p class="smoothies__description">
+                A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements. 
+            </p>
+            <div class="features">
+                <div class="features__items">
+                    <div class="features__item">
+                        <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon1.png" alt="Plant Based">
+                        <h6 class="features__item-text">Plant Based</h6>
+                    </div>
+                    <div class="features__item">
+                        <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon2.png" alt="Vegan">
+                        <p class="features__item-text">Vegan</p>
+                    </div>
+                    <div class="features__item">
+                        <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon3.png" alt="Palleo">
+                        <p class="features__item-text">Palleo</p>
+                    </div>
+                    <div class="features__item">
+                        <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon4.png" alt="Gluten-Free">
+                        <p class="features__item-text">Gluten-Free</p>
+                    </div>
+                    <div class="features__item">
+                        <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon5.png" alt="Corn-Free">
+                        <p class="features__item-text">Corn-Free</p>
+                    </div>
+                    <div class="features__item">
+                        <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon6.png" alt="Soy-Free">
+                        <p class="features__item-text">Soy-Free</p>
+                    </div>
+                    <div class="features__item">
+                        <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon7.png" alt="Ayurvedic">
+                        <p class="features__item-text">Ayurvedic</p>
+                    </div>
+                    <div class="features__item">
+                        <img class="features__item-img" src="/assets/images/WhatAreTheSmoothies/icon8.png" alt="Made With Love">
+                        <p class="features__item-text">Made With Love</p>
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
     <section class="about">
-        <div class="about__conteiner">
-            <div class="about__image-wrap">
-                <img class="about__image" src="/assets/images/about/img.png" alt="Smoothie">
-            </div>
-            <div class="about__description">
-                <h2 class="about__title">What makes Smoothie <span class="about__description-mark">an awesome drink?</span>  </h2>
-                <ul class="about__list">
-                    <li class="about__list-item">Crunchy Puffs Texture </li>         
-                    <li class="about__list-item">100 Calories per drink</li>
-                    <li class="about__list-item">4g Plant Protein </li>
-                    <li class="about__list-item">Good source of Magnesium & Vitamin B6</li>
-                    <li class="about__list-item">No Sugar in our Savory Flavors</li>
-                    <li class="about__list-item">Non-GMO, Vegan & Paleo</li>
-                    <li class="about__list-item">Gluten-Free & Grain-Free</li>
-                    <li class="about__list-item">Corn-Free & Soy-Free</li>
-                </ul>
-                <a href="#" class="about__btn btn">About Organic Smoothie</a>
+        <div class="conteiner">
+            <div class="about__body">
+                <div class="about__image-wrap">
+                    <img class="about__image" src="/assets/images/about/img.png" alt="Smoothie">
+                </div>
+                <div class="about__description">
+                    <h2 class="about__title">What makes Smoothie <span class="about__description-mark">an awesome drink?</span>  </h2>
+                    <ul class="about__list">
+                        <li class="about__list-item">Crunchy Puffs Texture </li>         
+                        <li class="about__list-item">100 Calories per drink</li>
+                        <li class="about__list-item">4g Plant Protein </li>
+                        <li class="about__list-item">Good source of Magnesium & Vitamin B6</li>
+                        <li class="about__list-item">No Sugar in our Savory Flavors</li>
+                        <li class="about__list-item">Non-GMO, Vegan & Paleo</li>
+                        <li class="about__list-item">Gluten-Free & Grain-Free</li>
+                        <li class="about__list-item">Corn-Free & Soy-Free</li>
+                    </ul>
+                    <a href="#" class="about__btn btn">About Organic Smoothie</a>
+                </div>
             </div>
         </div>
     </section>
@@ -149,40 +151,45 @@
         </div>
     </section>
     <section class="story">
-        <div class="story__description">
-            <h2 class="story__description-title">Our story</h2>
-            <p class="story__description-text">As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin, and seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake. </p>
-            <button class="story__description-btn btn">Who we are</button>
-        </div>
-        <div class="story__image-wrap">
-            <img class="story__image"src="/assets/images/story/image.jpg" alt="Our ingredients">
+        <div class="conteiner">
+            <div class="story__body">
+                <div class="story__description">
+                    <h2 class="story__description-title">Our story</h2>
+                    <p class="story__description-text">As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin, and seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake. </p>
+                    <button class="story__description-btn btn">Who we are</button>
+                </div>
+                <div class="story__image-wrap">
+                    <img class="story__image"src="/assets/images/story/image.jpg" alt="Our ingredients">
+                </div>
+            </div>
         </div>
     </section>
     <section class="testimonials">
-        <h2 class="testimonials__title">Why clients <span class="testimonials__title-word">LOVE </span >us?</h2>
-        <div class="testimonials__inner">
-            <div class="testimonials__comment comment">
-                <q class="comment-qoute">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
-                <div class="comment-author">- from Santa Monica, CA</div>
+            <h2 class="testimonials__title">Why clients <span class="testimonials__title-word">LOVE </span >us?</h2>
+            <div class="testimonials__inner">
+                <div class="testimonials__comment comment">
+                    <q class="comment-qoute">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
+                    <div class="comment-author">- from Santa Monica, CA</div>
+                </div>
+                <img class="testimonials__image" src="/assets/images/testimonials/img.png" alt="consumer" >
             </div>
-            <img class="testimonials__image" src="/assets/images/testimonials/img.png" alt="consumer" >
-        </div>
-        <div class="arrows">
-            <a href="" class="arrows__link-left"><img class="arrows__img-left"  src="/assets/images/testimonials/arrow-left .png" alt="arrow-left" ></a>
-            <a href="" class="arrows__link-left"><img class="arrows__img-right"  src="/assets/images/testimonials/arrow-right .png" alt="arrow-right" ></a>
-        </div>
+            <div class="arrows">
+                <a href="" class="arrows__link-left"><img class="arrows__img-left"  src="/assets/images/testimonials/arrow-left .png" alt="arrow-left" ></a>
+                <a href="" class="arrows__link-left"><img class="arrows__img-right"  src="/assets/images/testimonials/arrow-right .png" alt="arrow-right" ></a>
+            </div>
     </section>
     <section class="blog">
-        <h2 class="blog__title">Our blog</h2>
-        <div class="blog__inner">
-            <img class="blog__image" src="/assets/images/blog/img.jpg" alt="blog-img" >
-            <article class="blog__description">
-                <h3 class="blog__description-title">ASAFOETIDA - THE NEXT TURMERIC?</h3>
-                <p class="blog__description-date">Jun 16, 2020</p>
-                <p class="blog__description-text">
-                    If the fruit ingredients and the green vegetable ingredients are both juiced ahead of time, the mixed juice doesn't even have to be blended like a smoothie, i.e. a green juice or anything... <a class="blog__description-text-link" href="#"><span class="blog__description-text-word"></span> Read More</a>
-                </p>
-            </article>
+            <h2 class="blog__title">Our blog</h2>
+            <div class="blog__inner">
+                <img class="blog__image" src="/assets/images/blog/img.jpg" alt="blog-img" >
+                <article class="blog__description">
+                    <h3 class="blog__description-title">ASAFOETIDA - THE NEXT TURMERIC?</h3>
+                    <p class="blog__description-date">Jun 16, 2020</p>
+                    <p class="blog__description-text">
+                        If the fruit ingredients and the green vegetable ingredients are both juiced ahead of time, the mixed juice doesn't even have to be blended like a smoothie, i.e. a green juice or anything... <a class="blog__description-text-link" href="#"><span class="blog__description-text-word"></span> Read More</a>
+                    </p>
+                </article>
+            </div>
         </div>
     </section>
     <section class="instagram">
