slider for testimonials

--- a/index.html
+++ b/index.html
@@ -166,16 +166,35 @@
     </section>
     <section class="testimonials">
             <h2 class="testimonials__title">Why clients <span class="testimonials__title-word">LOVE </span >us?</h2>
-            <div class="testimonials__inner">
-                <div class="testimonials__comment comment">
-                    <q class="comment-qoute">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
-                    <div class="comment-author">- from Santa Monica, CA</div>
+            <div class="testimonials__slider slider">
+                <div class="testimonials__slider-item">
+                    <div class="testimonials__comment comment">
+                        <q class="comment-qoute">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
+                        <div class="comment-author">- from Santa Monica, CA</div>
+                    </div>
+                    <img class="testimonials__image" src="/assets/images/testimonials/img.png" alt="consumer" >
                 </div>
-                <img class="testimonials__image" src="/assets/images/testimonials/img.png" alt="consumer" >
-            </div>
-            <div class="arrows">
-                <a href="" class="arrows__link-left"><img class="arrows__img-left"  src="/assets/images/testimonials/arrow-left .png" alt="arrow-left" ></a>
-                <a href="" class="arrows__link-left"><img class="arrows__img-right"  src="/assets/images/testimonials/arrow-right .png" alt="arrow-right" ></a>
+                <div class="testimonials__slider-item">
+                    <div class="testimonials__comment comment">
+                        <q class="comment-qoute">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
+                        <div class="comment-author">- from Santa Monica, CA</div>
+                    </div>
+                    <img class="testimonials__image" src="/assets/images/testimonials/img.png" alt="consumer" >
+                </div>
+                <div class="testimonials__slider-item">
+                    <div class="testimonials__comment comment">
+                        <q class="comment-qoute">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
+                        <div class="comment-author">- from Santa Monica, CA</div>
+                    </div>
+                    <img class="testimonials__image" src="/assets/images/testimonials/img.png" alt="consumer" >
+                </div>
+                <div class="testimonials__slider-item">
+                    <div class="testimonials__comment comment">
+                        <q class="comment-qoute">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
+                        <div class="comment-author">- from Santa Monica, CA</div>
+                    </div>
+                    <img class="testimonials__image" src="/assets/images/testimonials/img.png" alt="consumer" >
+                </div>
             </div>
     </section>
     <section class="blog">
@@ -271,6 +290,7 @@
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/js/slick.min.js"></script>
     <script src="/js/script.js"></script>
 </body>
 </html
