--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/styles/main.min.css">
     <!-- Сюда подключаем стили -->
     <title>Smoothie-project</title>
 </head>
 
 <body>
-<header class="header">
+<header name="top" class="header">
     <div class="conteiner">
         <div class="header__body">
             <div class="header__burger burger__menu">
@@ -167,28 +167,28 @@
     <section class="testimonials">
             <h2 class="testimonials__title">Why clients <span class="testimonials__title-word">LOVE </span >us?</h2>
             <div class="testimonials__slider slider">
-                <div class="testimonials__slider-item">
+                <div class="slider-item">
                     <div class="testimonials__comment comment">
                         <q class="comment-qoute">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
                         <div class="comment-author">- from Santa Monica, CA</div>
                     </div>
                     <img class="testimonials__image" src="/assets/images/testimonials/img.png" alt="consumer" >
                 </div>
-                <div class="testimonials__slider-item">
+                <div class="slider-item">
                     <div class="testimonials__comment comment">
                         <q class="comment-qoute">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
                         <div class="comment-author">- from Santa Monica, CA</div>
                     </div>
                     <img class="testimonials__image" src="/assets/images/testimonials/img.png" alt="consumer" >
                 </div>
-                <div class="testimonials__slider-item">
+                <div class="slider-item">
                     <div class="testimonials__comment comment">
                         <q class="comment-qoute">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
                         <div class="comment-author">- from Santa Monica, CA</div>
                     </div>
                     <img class="testimonials__image" src="/assets/images/testimonials/img.png" alt="consumer" >
                 </div>
-                <div class="testimonials__slider-item">
+                <div class="slider-item">
                     <div class="testimonials__comment comment">
                         <q class="comment-qoute">”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.”</q>
                         <div class="comment-author">- from Santa Monica, CA</div>
@@ -268,8 +268,8 @@
             </nav>
             <div class="subscription">
                 <h4 class="subscription__title title">Don't miss out!</h4>
-                <input class="subscription__input input" type="mail" placeholder="subscribe to our newsletter">
-                <img class="input-icon" src="/assets/images/subscribe/letter.png" alt="">
+                <input class="subscription__input" type="mail" placeholder="subscribe to our newsletter">
+                <img class="subscription__input-icon" src="/assets/images/subscribe/letter.png" alt="">
                 <div class="footer-social">
                     <h5 class="footer-social__title">FOLLOW US</h5>
                     <ul class="footer-social__list">
@@ -285,7 +285,7 @@
             <span class="footer__botton-text">© 2020. span All Rights Reserved.</span>
             <div class="hug">
                 <div class="hug__text">Go top</div>
-                <div class="hug__arrow"><a class="hug__arrow-link" href="#"><img class="hug__arrow-img" src="/assets/images/footer-bottom/arrow-top.png" alt="arrow-top"></a></div>   
+                <div class="hug__arrow"><a class="hug__arrow-link" href="#top"><img class="hug__arrow-img" src="/assets/images/footer-bottom/arrow-top.png" alt="arrow-top"></a></div>   
             </div>
         </div>
     </footer>
